Changed stitched blobs to work with blobs with different data content sizes